Add void and reconciliation api
