# api/swagger/swagger.yaml
@@ -448,6 +448,94 @@ paths:
           description: "if the specified customer key is not found"
           schema:
             $ref: "#/definitions/ErrorDetail"
+  /pos/customers/void:
+    x-swagger-router-controller: POSController
+    post:
+      description: "Void the transaction of the customer. non-anonymous"
+      operationId: voidTransaction
+      security:
+        - jwt: []
+      x-access-control:
+        role: 
+          - "pos"
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          description: "Bearer access token in format Bearer {{accessToken}}"
+          required: true
+          type: string
+          format: string
+        - in: body
+          name: body
+          description: "the details of the transactions"
+          required: true
+          schema:
+            type: object
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+           type: object
+        "400":
+          description: "the validation failed, client request is invalid"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
+        "401":
+          description: "access token is not valid"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
+        "404":
+          description: "if the specified customer key is not found"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
+  /pos/reconciliation:
+    x-swagger-router-controller: POSController
+    post:
+      description: "Add transactions that is not listed within the day. non-anonymous"
+      operationId: reconciliation
+      security:
+        - jwt: []
+      x-access-control:
+        role: 
+          - "pos"
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          description: "Bearer access token in format Bearer {{accessToken}}"
+          required: true
+          type: string
+          format: string
+        - in: body
+          name: body
+          description: "the details of the transactions"
+          required: true
+          schema:
+            type: array
+            items:
+              type: "object"
+      responses:
+        "200":
+          description: "successful operation"
+        "400":
+          description: "the validation failed, client request is invalid"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
+        "401":
+          description: "access token is not valid"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
+        "404":
+          description: "if the specified customer key is not found"
+          schema:
+            $ref: "#/definitions/ErrorDetail"
   /pos/customers/new:
     x-swagger-router-controller: POSController
     post:
@@ -1163,6 +1251,7 @@ definitions:
     required:
       - id
       - role
+      - branch
     properties:
       id:
         type: number
@@ -1170,6 +1259,9 @@ definitions:
       role:
         type: string
         description: "the new role to be assigned"
+      branch:
+        type: string
+        description: "the branch"
   NewTransactionReq:
     type: object
     properties:
